# personal-site

./: .gitignore  config.toml  pyproject.toml  run.sh
content/: first.md
content/pages/: about.md
themes/terminimal-mine/sass/: post.scss
themes/terminimal-mine/templates/: index.html  page.html
themes/terminimal-mine/templates/macros/: katex.html  post.html
