[tool.poetry]
name = "template"
version = "0.0.1"
description = "Template"
authors = ["Liam Robinson <robin502@purdue.edu>"]
readme = "README.rst"
packages = [{include = "template"}]
include = [{path = "template", format = "sdist"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS, Windows, Linux",
]

[tool.poetry.dependencies]
python = ">=3.9"
scipy = ">=1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
